# cpp_project_template

./: .gitignore  CMakeLists.txt
cmake/Modules/: gmock.cmake
sandbox/: CMakeLists.txt  main.cpp
src/: CMakeLists.txt
src/todo/: CMakeLists.txt  to_do.cpp  to_do.h
test/todo/: CMakeLists.txt  to_do_test.cpp
